--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -6,9 +6,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		<head>
 				<title>Veggente project page</title>
 				<meta http-equiv="Content-type" content="text/html; charset=iso-8859-1"/>
+				<meta name="foaf:maker" content="foaf:mbox_sha1sum 'fe2d4a666128801732993d4ec744e45a10a79c2e'"/>
 				<link rel="stylesheet" href="css/style.css" type="text/css"/>
 				<link rel="alternate" title="Veggente RSS" href="http://veggente.berlios.de/news.rss" type="application/rss+xml"/>
 				<link rel="alternate" title="Veggente development RSS" href="http://veggente.berlios.de/devel.rss" type="application/rss+xml"/>
+				<link rel="meta" type="application/rdf+xml" title="FOAF" href="http://veggente.berlios.de/foaf.rdf" />
 		</head>
 		<body>
 				<table class="maintable">
@@ -18,7 +20,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 												<b><a href="http://veggente.berlios.de/index.html" class="maintitlebar">Home</a></b> |
 												<b><a href="http://developer.berlios.de/project/showfiles.php?group_id=5446" class="maintitlebar">Download</a></b> |
 												<b><a href="http://developer.berlios.de/projects/veggente/" class="maintitlebar">Project Page</a></b> |
-												<b><a href="http://veggente.berlios.de/" class="maintitlebar">About</a></b>
+												<b><a href="http://veggente.berlios.de/about.html" class="maintitlebar">About</a></b>
 										</span>
 								</td>
 						</tr>
@@ -28,8 +30,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 										<hr/>
 										Il progetto Veggente nasce come tesi di laurea (tuttora in corso) del Politecnico di Milano nel settore dell'informatica medica.<br/>
 										<h2>Obiettivi</h2>
-										L'obiettivo del progetto e' di creare un "ponte ontologico" tra protocolli diversi, sfruttando le ontologie a cui fanno riferimento.<br/>
-										In particolare verra' curata la conversione di messaggi dal protocollo HL7 versione 2 al protocollo versione 3 (e viceversa).
+										L'obiettivo del progetto è di creare un "ponte ontologico" tra protocolli diversi, sfruttando le ontologie a cui fanno riferimento.<br/>
+										In particolare verrà curata la conversione di messaggi dal protocollo HL7 versione 2 al protocollo versione 3 (e viceversa).
 										<h3>Status</h3>
 										E' al momento in corso la costruzione dell'ontologia di riferimento. 
 										Il processo di conversione dal formalismo di HL7 ad OWL si sta rivelando decisamente lungo, sembra che solo chi ha SCRITTO lo standard sia in grado di capirlo...<br/>
@@ -48,10 +50,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 										Alessio Carenini - 2006
 								</td>
 								<td class="right">
-										<a href="http://www.vim.org"><img src="img/vim_created.gif" alt="Site created with VIM"/></a>
-										<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+										<a href="http://veggente.berlios.de/foaf.rdf"><img src="img/foaf.gif" alt="See FOAF data"/></a><br/>
+										<a href="http://www.vim.org"><img src="img/vim_logo.gif" alt="Site created with VIM"/></a>
 								</td>
 						</tr>
 				</table>
+				<div class="center">
+						<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+						<a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=0" width="124" height="31" alt="BerliOS Logo" /></a>
+				</div>
 		</body>
 </html>
