Conan: reduced the number of db queries

--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -31,8 +31,12 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 										Il progetto Veggente nasce come tesi di laurea (tuttora in corso) del Politecnico di Milano nel settore dell'informatica medica.<br/>
 										<h2>Obiettivi</h2>
 										Gli obiettivi del progetto sono due:
-										<li>Permettere l'istanziamento di nuovi documenti HL7 v3 partendo dai dati di altri documenti HL7 v3.</li>
-										<li>Estendere la capacità in input permettendo l'import di documenti provenienti da altri standard attraverso mapping semantici e sintattici</li>
+                                        <li>Permettere l'istanziamento di nuovi documenti HL7 v3 partendo dai dati di altri documenti HL7 v3 
+                                                (v. <a href="http://veggente.berlios.de/doc/concordia.png">architettura</a>).</li>
+                                        <li>Estendere la capacità in input permettendo l'import di documenti provenienti da altri standard attraverso mapping semantici e sintattici 
+                                           (v. <a href="http://veggente.berlios.de/doc/concordia.png">architettura completa</a>)</li>
+                                        <a href="http://veggente.berlios.de/doc/Veggente.ppt">Qui</a> è possibile trovare delle slide con qualche informazione in più. 
+                                            (purtroppo sono in Powerpoint, ma solo perchè c'è un'animazione)
 										<h3>Status</h3>
 											<h4>Ontologie</h4>
 											Sono state convertite in ontologie le informazioni contenute nei CMET e negli HMD, oltre al RIM e ai Datatype.
