Conan: log reorganization. Cut out xsi:schemaLocation

--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -28,7 +28,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 								<td>
 										&nbsp;<h1>Progetto Veggente</h1>
 										<hr/>
-										Il progetto Veggente nasce come tesi di laurea (tuttora in corso) del Politecnico di Milano nel settore dell'informatica medica.<br/>
+										Il progetto Veggente nasce come tesi di laurea (tutt'ora in corso) del Politecnico di Milano nel settore dell'informatica medica.<br/>
 										<h2>Obiettivi</h2>
 										Gli obiettivi del progetto sono due:
                                         <li>Permettere l'istanziamento di nuovi documenti HL7 v3 partendo dai dati di altri documenti HL7 v3 
