Small changes to the home page

--- a/trunk/www/index.html
+++ b/trunk/www/index.html
@@ -20,7 +20,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 												<b><a href="http://veggente.berlios.de/index.html" class="maintitlebar">Home</a></b> |
 												<b><a href="http://developer.berlios.de/project/showfiles.php?group_id=5446" class="maintitlebar">Download</a></b> |
 												<b><a href="http://developer.berlios.de/projects/veggente/" class="maintitlebar">Project Page</a></b> |
-												<b><a href="http://veggente.berlios.de/about.html" class="maintitlebar">About</a></b>
+												<b><a href="http://veggente.berlios.de/about.html" class="maintitlebar">About</a></b> |
+												<b><a href="http://veggente.berlios.de/index.html" class="maintitlebar"><img src="img/uk.gif" alt="English version"></a></b>
 										</span>
 								</td>
 						</tr>
